--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "bugs": {
     "url": "https://github.com/ulic75/ha-ulics-icons/issues"
   },
+  "scripts": {
+    "release": "pnpx semantic-release"
+  },
   "homepage": "https://github.com/ulic75/ha-ulics-icons#readme",
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.1",
